--- a/src/components/input-range.scss
+++ b/src/components/input-range.scss
@@ -20,9 +20,8 @@
 
 	.kol-input label {
 		order: 2;
-		font-size: var(--label-size);
-		font-weight: var(--label-weight);
-		color: var(--label-color);
+		font-size: 0.9rem;
+		font-weight: 700;
 	}
 
 	.kol-input .input {
