--- a/src/components/link-button.scss
+++ b/src/components/link-button.scss
@@ -73,7 +73,7 @@
 	.ghost :is(a, button):hover > .kol-span-wc {
 		background-color: var(--color-primary-variant);
 		border-color: var(--color-primary-variant);
-		box-shadow: var(--box-shadow-inputs);
+		box-shadow: 0px 2px 8px 2px rgba(8, 35, 48, 0.24);
 		color: var(--color-light);
 	}
 
@@ -132,7 +132,7 @@
 	.ghost :is(a, button).small.transparent:hover > .kol-span-wc > span {
 		background-color: var(--color-primary-variant);
 		border-color: var(--color-primary-variant);
-		box-shadow: var(--box-shadow-inputs);
+		box-shadow: 0px 2px 8px 2px rgba(8, 35, 48, 0.24);
 		color: var(--color-light);
 	}
 
